--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,7 +13,9 @@ Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1.9000
-Imports: 
+Imports:
+    fs,
     cli,
     httpuv,
-    assertthat
+    assertthat,
+    jsonlite
