--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,5 +5,6 @@ export(create_ambiorix)
 export(import)
 export(response)
 export(response_404)
+export(response_file)
 export(response_render)
 importFrom(assertthat,assert_that)
