better websocket handling

--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,2 +1,9 @@
 ^LICENSE\.md$
 test.R
+^srcjs$
+^node_modules$
+^package\.json$
+^package-lock\.json$
+^webpack\.dev\.js$
+^webpack\.prod\.js$
+^webpack\.common\.js$
