--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,4 +5,5 @@ export(create_ambiorix)
 export(import)
 export(response)
 export(response_404)
+export(stop_all)
 importFrom(assertthat,assert_that)
