added new_app() foo

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(Ambiorix)
 export(copy_websocket_client)
 export(create_ambiorix)
 export(import)
+export(new_app)
 export(response)
 export(response_404)
 export(robj)
