Error handling closes #9

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(import)
 export(new_app)
 export(response)
 export(response_404)
+export(response_500)
 export(robj)
 export(stop_all)
 importFrom(assertthat,assert_that)
