--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,10 +3,12 @@
 S3method(print,ambiorixResponse)
 S3method(print,robj)
 export(Ambiorix)
+export(Router)
 export(copy_websocket_client)
 export(create_ambiorix)
 export(import)
 export(new_app)
+export(parse_multipart)
 export(response)
 export(response_404)
 export(response_500)
