add examples + create_dockerfile function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(Ambiorix)
 export(Router)
 export(copy_websocket_client)
 export(create_ambiorix)
+export(create_dockerfile)
 export(forward)
 export(import)
 export(parse_multipart)
