added templates doc

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ S3method(print,forward)
 S3method(print,robj)
 export(Ambiorix)
 export(Router)
+export(add_template)
 export(copy_websocket_client)
 export(create_ambiorix)
 export(create_dockerfile)
