log websocket messages

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,7 +21,8 @@ Imports:
     httpuv,
     promises,
     jsonlite,
-    assertthat
+    websocket,
+    assertthat,
 Suggests:
     mime,
     readr,
