--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method(print,ambiorixResponse)
 S3method(print,forward)
 S3method(print,robj)
 export(Ambiorix)
+export(Logger)
 export(Router)
 export(add_template)
 export(copy_websocket_client)
