--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,4 +19,5 @@ export(response_500)
 export(robj)
 export(stop_all)
 importFrom(assertthat,assert_that)
+importFrom(methods,formalArgs)
 importFrom(utils,browseURL)
