--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(create_ambiorix)
 export(create_dockerfile)
 export(forward)
 export(import)
+export(new_log)
 export(parse_multipart)
 export(response)
 export(response_404)
