--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,15 @@
 Package: ambiorix
 Title: Web Framework Inspired by 'Express.js'
-Version: 1.0.1
+Version: 1.0.2
 Authors@R: 
     person(given = "John",
            family = "Coene",
            role = c("aut", "cre"),
            email = "jcoenep@gmail.com",
            comment = c(ORCID = "0000-0002-6637-4107"))
-Description: A web framework inspired by 'express.js'.
+Description: A web framework inspired by 'express.js' to build
+  any web service from multi-page websites to 'RESTful' 
+  application programming interfaces.
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
@@ -30,3 +32,5 @@ Suggests:
   readr,
   htmltools,
   htmlwidgets
+URL: https://github.com/JohnCoene/ambiorix, https://ambiorix.john-coene.com
+BugReports: https://github.com/JohnCoene/ambiorix/issues
