--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(create_dockerfile)
 export(forward)
 export(import)
 export(new_log)
+export(parse_json)
 export(parse_multipart)
 export(response)
 export(response_404)
