refactor: remove deprecated logger

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(copy_websocket_client)
 export(create_dockerfile)
 export(forward)
 export(import)
+export(new_log)
 export(parse_json)
 export(parse_multipart)
 export(response)
