docs(response): export and document class

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method(print,ambiorixResponse)
 S3method(print,forward)
 S3method(print,robj)
 export(Ambiorix)
+export(Response)
 export(Router)
 export(copy_websocket_client)
 export(create_dockerfile)
@@ -12,6 +13,7 @@ export(import)
 export(new_log)
 export(parse_json)
 export(parse_multipart)
+export(pre_hook)
 export(response)
 export(response_404)
 export(response_500)
