docs(request): document and export class

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method(print,ambiorixResponse)
 S3method(print,forward)
 S3method(print,robj)
 export(Ambiorix)
+export(Request)
 export(Response)
 export(Router)
 export(copy_websocket_client)
