feat(token): add function to create token

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ export(response_404)
 export(response_500)
 export(robj)
 export(stop_all)
+export(token_create)
 importFrom(assertthat,assert_that)
 importFrom(methods,formalArgs)
 importFrom(utils,browseURL)
