--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(Ambiorix)
 export(Request)
 export(Response)
 export(Router)
+export(Websocket)
 export(copy_websocket_client)
 export(create_dockerfile)
 export(forward)
