fix: update dockerfile

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,7 +1,8 @@
 FROM rocker/r-ver:latest
 RUN apt-get update && apt-get install -y \
   git-core \
-  libssl-dev
+  libssl-dev \
+  r-cran-httpuv
 RUN echo "options(repos = c(CRAN = 'https://packagemanager.rstudio.com/all/latest'))" >> /usr/local/lib/R/etc/Rprofile.site
 RUN R -e 'install.packages("remotes")'
 RUN R -e 'install.packages("mime")'
