--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,9 @@ export(response)
 export(response_404)
 export(response_500)
 export(robj)
+export(set_log_error)
+export(set_log_info)
+export(set_log_success)
 export(stop_all)
 export(token_create)
 importFrom(assertthat,assert_that)
