--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,11 +2,14 @@ Package: ambiorix
 Title: Web Framework Inspired by 'Express.js'
 Version: 2.0.0.9000
 Authors@R: 
+  c(
     person(given = "John",
            family = "Coene",
            role = c("aut", "cre"),
            email = "jcoenep@gmail.com",
-           comment = c(ORCID = "0000-0002-6637-4107"))
+           comment = c(ORCID = "0000-0002-6637-4107")),
+    person(family = "Opifex", role = c("fnd", "cph"))
+  )
 Description: A web framework inspired by 'express.js' to build
   any web service from multi-page websites to 'RESTful' 
   application programming interfaces.
@@ -33,7 +36,7 @@ Suggests:
   htmltools,
   commonmark,
   htmlwidgets
-URL: https://github.com/JohnCoene/ambiorix, https://ambiorix.john-coene.com
-BugReports: https://github.com/JohnCoene/ambiorix/issues
+URL: https://github.com/devOpifex/ambiorix, https://ambiorix.dev
+BugReports: https://github.com/devOpifex/ambiorix/issues
 Remotes: 
   devOpifex/log
