--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: ambiorix
 Title: Web Framework Inspired by 'Express.js'
-Version: 2.0.0.9000
+Version: 2.0.0
 Authors@R: 
   c(
     person(given = "John",
@@ -8,7 +8,7 @@ Authors@R:
            role = c("aut", "cre"),
            email = "jcoenep@gmail.com",
            comment = c(ORCID = "0000-0002-6637-4107")),
-    person(family = "Opifex", role = c("fnd", "cph"))
+    person(family = "Opifex", role = c("fnd"))
   )
 Description: A web framework inspired by 'express.js' to build
   any web service from multi-page websites to 'RESTful' 
@@ -38,5 +38,3 @@ Suggests:
   htmlwidgets
 URL: https://github.com/devOpifex/ambiorix, https://ambiorix.dev
 BugReports: https://github.com/devOpifex/ambiorix/issues
-Remotes: 
-  devOpifex/log
