feat(render): added jobj to serialise to json

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 S3method(print,ambiorixResponse)
 S3method(print,forward)
+S3method(print,jobj)
 S3method(print,robj)
 export(Ambiorix)
 export(Request)
@@ -12,6 +13,7 @@ export(copy_websocket_client)
 export(create_dockerfile)
 export(forward)
 export(import)
+export(jobj)
 export(new_log)
 export(parse_json)
 export(parse_multipart)
