feat(cookie): allow registering new cookie parser

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,8 +9,10 @@ export(Request)
 export(Response)
 export(Router)
 export(Websocket)
+export(as_cookie_parser)
 export(copy_websocket_client)
 export(create_dockerfile)
+export(default_cookie_parser)
 export(forward)
 export(import)
 export(jobj)
