feat(cookie): add preprocessors

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(Response)
 export(Router)
 export(Websocket)
 export(as_cookie_parser)
+export(as_cookie_preprocessor)
 export(copy_websocket_client)
 export(create_dockerfile)
 export(default_cookie_parser)
