feat(headers): add content_* family

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,11 @@ export(Router)
 export(Websocket)
 export(as_cookie_parser)
 export(as_cookie_preprocessor)
+export(content_csv)
+export(content_html)
+export(content_json)
+export(content_plain)
+export(content_tsv)
 export(copy_websocket_client)
 export(create_dockerfile)
 export(default_cookie_parser)
