--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ S3method(print,cookieParser)
 S3method(print,cookiePreprocessor)
 S3method(print,forward)
 S3method(print,jobj)
+S3method(print,responsePreHook)
 S3method(print,robj)
 export(Ambiorix)
 export(Request)
