feat(serialiser): export

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,6 +34,7 @@ export(response)
 export(response_404)
 export(response_500)
 export(robj)
+export(serialise)
 export(set_log_error)
 export(set_log_info)
 export(set_log_success)
