fix(response): do not force convert to character #44

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(content_csv)
 export(content_html)
 export(content_json)
 export(content_plain)
+export(content_protobuf)
 export(content_tsv)
 export(copy_websocket_client)
 export(create_dockerfile)
