--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ S3method(print,cookieParser)
 S3method(print,cookiePreprocessor)
 S3method(print,forward)
 S3method(print,jobj)
+S3method(print,pathToPattern)
 S3method(print,responsePreHook)
 S3method(print,robj)
 export(Ambiorix)
@@ -15,6 +16,7 @@ export(Router)
 export(Websocket)
 export(as_cookie_parser)
 export(as_cookie_preprocessor)
+export(as_path_to_pattern)
 export(content_csv)
 export(content_html)
 export(content_json)
