feat: add mockRequest fixes #49

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,7 @@ export(default_cookie_parser)
 export(forward)
 export(import)
 export(jobj)
+export(mockRequest)
 export(new_log)
 export(parse_json)
 export(parse_multipart)
