--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -31,11 +31,13 @@ Imports:
   websocket,
   assertthat
 Suggests:
-  mime,
-  readr,
-  ggplot2,
-  htmltools,
-  commonmark,
-  htmlwidgets
+    mime,
+    readr,
+    ggplot2,
+    htmltools,
+    commonmark,
+    htmlwidgets,
+    testthat (>= 3.0.0)
 URL: https://github.com/devOpifex/ambiorix, https://ambiorix.dev
 BugReports: https://github.com/devOpifex/ambiorix/issues
+Config/testthat/edition: 3
