--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -26,3 +26,6 @@ jobs:
           extra-packages: rcmdcheck
 
       - uses: r-lib/actions/check-r-package@v1
+      - name: Test coverage
+        run: covr::codecov(token='${{ secrets.CODECOV_TOKEN }}')
+        shell: Rscript {0}
