--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -27,5 +27,5 @@ jobs:
 
       - uses: r-lib/actions/check-r-package@v1
       - name: Test coverage
-        run: covr::codecov(token='${{ secrets.CODECOV_TOKEN }}')
+        run: install.packages('covr');covr::codecov(token='${{ secrets.CODECOV_TOKEN }}')
         shell: Rscript {0}
