feat: allow custom renderer

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ S3method(print,cookiePreprocessor)
 S3method(print,forward)
 S3method(print,jobj)
 S3method(print,pathToPattern)
+S3method(print,renderer)
 S3method(print,responsePreHook)
 S3method(print,robj)
 export(Ambiorix)
@@ -17,6 +18,7 @@ export(Websocket)
 export(as_cookie_parser)
 export(as_cookie_preprocessor)
 export(as_path_to_pattern)
+export(as_renderer)
 export(content_csv)
 export(content_html)
 export(content_json)
