feat(renderer): add htmlTemplate renderer

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -46,6 +46,7 @@ export(set_log_info)
 export(set_log_success)
 export(stop_all)
 export(token_create)
+export(use_html_template)
 importFrom(assertthat,assert_that)
 importFrom(methods,formalArgs)
 importFrom(utils,browseURL)
