--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -1,4 +1,4 @@
-# Workflow derived from https://github.com/r-lib/actions/tree/master/examples
+# Workflow derived from https://github.com/r-lib/actions/tree/v2/examples
 # Need help debugging build failures? Start at https://github.com/r-lib/actions#where-to-find-help
 on:
   push:
@@ -10,44 +10,40 @@ name: R-CMD-check
 
 jobs:
   R-CMD-check:
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.config.os }}
+
+    name: ${{ matrix.config.os }} (${{ matrix.config.r }})
+
+    strategy:
+      fail-fast: false
+      matrix:
+        config:
+          - {os: macos-latest,   r: 'release'}
+          - {os: windows-latest, r: 'release'}
+          - {os: ubuntu-latest,   r: 'devel', http-user-agent: 'release'}
+          - {os: ubuntu-latest,   r: 'release'}
+          - {os: ubuntu-latest,   r: 'oldrel-1'}
+
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
       R_KEEP_PKG_SOURCE: yes
-    steps:
-      - uses: actions/checkout@v2
 
-      - uses: r-lib/actions/setup-r@v1
+    steps:
+      - uses: actions/checkout@v3
+
+      - uses: r-lib/actions/setup-pandoc@v2
+
+      - uses: r-lib/actions/setup-r@v2
         with:
+          r-version: ${{ matrix.config.r }}
+          http-user-agent: ${{ matrix.config.http-user-agent }}
           use-public-rspm: true
 
-      - uses: r-lib/actions/setup-r-dependencies@v1
+      - uses: r-lib/actions/setup-r-dependencies@v2
         with:
-          extra-packages: rcmdcheck
+          extra-packages: any::rcmdcheck
+          needs: check
 
-      - name: Enable Repo on Coveralls
-        id: enable_coveralls
-        run: |
-          curl -s -H "Accept: application/json" \
-            -H "Content-Type: application/json" \
-            -H "Authorization: token $COVERALLS_TOKEN" \
-            -d '{"repo": {"service": "github","name": "'$GITHUB_REPOSITORY'"}}' \
-            -X POST https://coveralls.io/api/repos
-     
-      - name: Get Coveralls Repo Token
-        id: get_coverall_repo_token
-        run: |
-          echo "COVERALLS_REPO_TOKEN=$(\
-            curl -s -H "Accept: application/json" \
-            -H "Content-Type: application/json" \
-            -H "Authorization: token $COVERALLS_TOKEN" \
-            https://coveralls.io/api/repos/github/$GITHUB_REPOSITORY \
-            | jq '.token')" >> $GITHUB_ENV
-
-      - uses: r-lib/actions/check-r-package@v1
-      - name: Test coverage
-        run: | 
-          install.packages('covr')
-          covr::codecov(token='${{ secrets.CODECOV_TOKEN }}')
-          covr::coveralls(repo_token='${{secrets.COVERALLS_TOKEN}}', service_name="drone")
-        shell: Rscript {0}
+      - uses: r-lib/actions/check-r-package@v2
+        with:
+          upload-snapshots: true
