fix: create client before store

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,6 +33,7 @@ export(copy_websocket_client)
 export(create_dockerfile)
 export(default_cookie_parser)
 export(forward)
+export(get_websocket_clients)
 export(import)
 export(jobj)
 export(mockRequest)
