--- a/NAMESPACE
+++ b/NAMESPACE
@@ -39,6 +39,7 @@ export(mockRequest)
 export(new_log)
 export(parse_json)
 export(parse_multipart)
+export(parse_req)
 export(pre_hook)
 export(response)
 export(response_404)
