docs: update man files & NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,9 +37,9 @@ export(import)
 export(jobj)
 export(mockRequest)
 export(new_log)
+export(parse_form_urlencoded)
 export(parse_json)
 export(parse_multipart)
-export(parse_req)
 export(pre_hook)
 export(response)
 export(response_404)
