--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,7 +8,8 @@ Authors@R:
            role = c("aut", "cre"),
            email = "jcoenep@gmail.com",
            comment = c(ORCID = "0000-0002-6637-4107")),
-    person(family = "Opifex", role = c("fnd"))
+    person(family = "Opifex", role = c("fnd")),
+    person(given = "Kennedy", family = "Mwavu", role = "ctb", comment = c(ORCID = "0009-0006-3157-7234"))
   )
 Description: A web framework inspired by 'express.js' to build
   any web service from multi-page websites to 'RESTful' 
