--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,15 +26,16 @@ Imports:
     glue,
     httpuv,
     methods,
-    jsonlite,
     assertthat,
     webutils (>= 1.2.0),
     yyjsonr (>= 0.1.20)
 Suggests:
   mime,
   readr,
+  readxl,
   ggplot2,
   promises,
+  jsonlite,
   websocket,
   htmltools,
   commonmark,
